# gtui

./: .gitignore  Cargo.toml  README.md  schema.sql  settings.toml
.github/workflows/: ci.yml
docs/plans/: 2026-02-12-undo-feature-design.md  2026-02-12-undo-feature.md
src/: auth.rs  config.rs  db.rs  gmail.rs  main.rs  models.rs  sync.rs  ui.rs  undo.rs
