[package]
name = "gtui"
version = "0.1.0"
edition = "2024"
default-run = "gtui"

[dependencies]
# TUI and Terminal Handling
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

# Gmail API and OAuth2
google-gmail1 = "5.0"
yup-oauth2 = "9.0"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Secure Token Storage
keyring = "2.3"

# Error Handling and Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
base64 = "0.21"
open = "5.3"
inflections = "1.1.1"
